添加定时任务测试

--- a/.github/workflows/fork_star.yml
+++ b/.github/workflows/fork_star.yml
@@ -6,7 +6,8 @@ on:
     types:
       - started
   schedule:
-    - cron: '0 0 * * *'
+    - cron: "10 10 * * *"
+      timezone: 'Asia/Shanghai'
   workflow_dispatch:
 
 jobs:
