--- a/.github/workflows/contrib.yml
+++ b/.github/workflows/contrib.yml
@@ -2,7 +2,8 @@ name: 3D Contrib
 
 on:
   schedule:
-    - cron: "0 0 * * *"
+    - cron: "10 10 * * *"
+      timezone: 'Asia/Shanghai'
     # https://docs.github.com/zh/actions/using-workflows/events-that-trigger-workflows#schedule
   workflow_dispatch:
 
