--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -4,8 +4,8 @@ name: GitHub Metrics
 
 on:
   schedule:
-    - cron: "*/15 * * * *"  # 每15分钟运行一次（用于测试）
-    - cron: "0 0 * * *"     # 每天UTC 0点
+    - cron: "10 10 * * *"
+      timezone: 'Asia/Shanghai'
     # https://docs.github.com/zh/actions/using-workflows/events-that-trigger-workflows#schedule
   workflow_dispatch:
 
