--- a/.github/workflows/contrib.yml
+++ b/.github/workflows/contrib.yml
@@ -2,8 +2,7 @@ name: 3D Contrib
 
 on:
   schedule:
-    - cron: "10 10 * * *"
-      timezone: 'Asia/Shanghai'
+    - cron: '2 18 * * *'
     # https://docs.github.com/zh/actions/using-workflows/events-that-trigger-workflows#schedule
   workflow_dispatch:
 
