--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -4,8 +4,7 @@ name: GitHub Metrics
 
 on:
   schedule:
-    - cron: "10 10 * * *"
-      timezone: 'Asia/Shanghai'
+    - cron: '2 18 * * *'
     # https://docs.github.com/zh/actions/using-workflows/events-that-trigger-workflows#schedule
   workflow_dispatch:
 
