--- a/.github/workflows/fork_star.yml
+++ b/.github/workflows/fork_star.yml
@@ -17,4 +17,4 @@ jobs:
         uses: ouuan/This-repo-has-x-stars-y-forks-action@v2
         with:
           token: ${{ secrets.GH_TOKEN }}
-          template: "zyone2's profile with <starCount> stars and <forkCount> forks 🎉"
+          template: "zhizhi2213's profile with <starCount> stars and <forkCount> forks 🎉"
